# embed

./: README.md
bilapp/: README.md  pubspec.yaml
bilapp/android/app/: build.gradle
bilapp/android/app/src/main/: AndroidManifest.xml
bilapp/android/app/src/main/kotlin/com/example/bilapp/: MainActivity.kt
bilapp/android/app/src/profile/: AndroidManifest.xml
bilapp/ios/Runner/: Info.plist
bilapp/ios/Runner.xcodeproj/: project.pbxproj
bilapp/lib/: main.dart
bilapp/lib/models/: bt_device.dart  bt_services.dart
bilapp/lib/views/: home.dart  scanner.dart
bilapp/lib/widgets/: bt_connect_button.dart  drive_controller.dart  signal.dart
bilapp/test/: widget_test.dart
bilapp/web/: index.html  manifest.json
bilapp/windows/: CMakeLists.txt
bilapp/windows/runner/: Runner.rc  main.cpp
bildriver/: .upload_n_run.bat.un~  Cargo.toml  bildriver.ino  main.py  upload.bat  upload_n_run.bat
bildriver/.cargo/: config.toml
bildriver/src/: .main.rs.swp  main.rs
