[package]
name = "arm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

target = "armv7-unknown-linux-gnueabihf"
rustflags = ["-C", "cc"]

[target.armv7-unknown-linux-gnueabihf]
linker = "cc"



[dependencies]
#wiringpi = "0.2.4"