[package]
name = "bildriver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

target = "armv7-unknown-linux-gnueabihf"
rustflags = ["-C", "cc"]

[target.armv7-unknown-linux-gnueabihf]
linker = "cc"



[dependencies]
bluer = "0.13.1"
futures = "0.3.18"
tokio = "1.14.0"

#wiringpi = "0.2.4"