[package]
name = "bildriver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

target = "armv7-unknown-linux-gnueabihf"
rustflags = ["-C", "cc"]

[target.armv7-unknown-linux-gnueabihf]
linker = "cc"



[dependencies]
bluer = { version = "0.13.1", features = ["bluetoothd"] }
futures = "0.3.18"
uuid = "0.8.2"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "io-std"] }

rppal = "0.13.1"